--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -49,3 +49,4 @@ collections:
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "biz-demo"}
           - {label: "Title", name: "title", widget: "string"}
+          - {label: ImagePanels, name: image_panels, widget: list, fields: [{label: Title, name: title, widget: string}, {label: Text, name: text, widget: string}, {label: Image, name: image, widget: image}, {label: Orientation, name: orientation, widget: select, options: ["left", "right"]}]}
