--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -50,3 +50,13 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "biz-demo"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: ImagePanels, name: image_panels, widget: list, fields: [{label: Title, name: title, widget: string}, {label: Text, name: text, widget: string}, {label: Image, name: image, widget: image}, {label: Orientation, name: orientation, widget: select, options: ["left", "right"]}]}
+
+  - name: "biz-marketing-page"
+    label: "Biz Marketing Page"
+    folder: "src/pages/biz-marketing-page"
+    create: true
+    slug: "biz-marketing-{{slug}}"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "biz-marketing-page"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: ImagePanels, name: image_panels, widget: list, fields: [{label: Title, name: title, widget: string}, {label: Text, name: text, widget: string}, {label: Image, name: image, widget: image}, {label: Orientation, name: orientation, widget: select, options: ["left", "right"]}]}
