--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
-  name: git-gateway
-  branch: master
+  name: github
+  repo: hanchennz/gatsby-starter-netlify-cms-hack26
 
 media_folder: static/img
 public_folder: /img
