--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@mosch/gatsby-source-github": "^0.4.1",
     "bulma": "^0.6.0",
+    "dotenv": "^6.0.0",
     "gatsby": "^1.9.213",
     "gatsby-link": "^1.6.37",
     "gatsby-plugin-netlify": "^1.0.19",
