--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,13 +2,13 @@ backend:
   name: github
   repo: hanchennz/gatsby-starter-netlify-cms-hack26-data
 
-media_folder: data/img
+media_folder: /img
 public_folder: /img
 
 collections:
   - name: "biz-marketing-page"
     label: "Biz Marketing Page"
-    folder: "data/pages/biz-marketing-page"
+    folder: "pages/biz-marketing-page"
     create: true
     slug: "{{slug}}"
     fields:
@@ -22,7 +22,7 @@ collections:
 
   - name: "new-biz-marketing-page"
     label: "New Biz Marketing Page"
-    folder: "data/pages/new-biz-marketing-page"
+    folder: "pages/new-biz-marketing-page"
     create: true
     slug: "{{slug}}"
     fields:
