--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
-    "@mosch/gatsby-source-github": "^0.4.1",
     "bulma": "^0.6.0",
     "dotenv": "^6.0.0",
     "gatsby": "^1.9.213",
@@ -21,6 +20,7 @@
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms": "^1.7.0",
+    "octokat": "^0.10.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-helmet": "^5.2.0",
